--- a/01-boostrap-grid.html
+++ b/01-boostrap-grid.html
@@ -22,25 +22,25 @@
     </style>
   </head>
   <body>
-      <div class="container">
+      <div class="container-fluid">
       
         <div class="row">
-            <div class="col-12 gray">.col-12</div>
+            <div class="col-12 col-md-12 gray">.col-12</div>
         </div>
         <div class="row">
-            <div class="col-4 gray">.col-4</div>
-            <div class="col-4 gray">.col-4</div>
-            <div class="col-4 gray">.col-4</div>
+            <div class="col-4 col-md-4 gray">.col-4</div>
+            <div class="col-4 col-md-4 gray">.col-4</div>
+            <div class="col-4 col-md-4 gray">.col-4</div>
         </div>
         <div class="row">
-            <div class="col-4 gray">.col-4</div>
-            <div class="col-8 gray">.col-8</div>                
+            <div class="col-4 col-md-4 gray">.col-4</div>
+            <div class="col-8 col-md-8 gray">.col-8</div>                
         </div>
         <div class="row">
-            <div class="col-3 gray">.col-3</div>
-            <div class="col-3 gray">.col-3</div>
-            <div class="col-3 gray">.col-3</div>
-            <div class="col-3 gray">.col-3</div>
+            <div class="col-3 col-md-3 gray">.col-3</div>
+            <div class="col-3 col-md-3 gray">.col-3</div>
+            <div class="col-3 col-md-3 gray">.col-3</div>
+            <div class="col-3 col-md-3 gray">.col-3</div>
         </div>
 
       </div>
