--- a/02-grid-exercise.html
+++ b/02-grid-exercise.html
@@ -22,7 +22,28 @@
     </style>
   </head>
   <body>
+      <div class="container-fluid">
+      
+        <div class="row">
+            <div class="col-12 gray">.col-12</div>
+        </div>
+        <div class="row">
+            <div class="col-4 gray">.col-4</div>
+            <div class="col">
+              <div class="row">
+                <div class="col-6 gray">.col-3</div>
+                <div class="col-6 gray">.col-3</div>
+              </div>
+              <div class="row">
+                <div class="col-12 gray">.col-6</div>
+              </div>
+            </div>                
+        </div>
+        <div class="row">
+          <div class="col-12 gray">.col-12</div>
+      </div>
 
+      </div>
 
       <script src="js/jquery.js"></script>
       <script src="js/popper.min.js"></script>
